Ensure date doesn't break the data table rows

--- a/Source/Umbraco/Plugin/css/form.less
+++ b/Source/Umbraco/Plugin/css/form.less
@@ -468,16 +468,16 @@
           &.select {
             width: 35px;
           }
-
-          &.date {
-            width: 100px;
-          }
         }
       }
 
       tbody tr {
         td {
           cursor: default;
+
+          &.date {
+            white-space: nowrap;
+          }
 
           &.form-data-view-entry {
             text-align: -webkit-right;
